--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "easy_crm_frontend",
+  "homepage": "https://CarlosCarrascal.github.io/eascrm_frontend-",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "lint": "eslint .",
     "preview": "vite preview"
   },
